# orchestrator

./: .claudeignore  .envrc  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.sh
contracts/compat/: protocol_version.json
contracts/schemas/: AssetManifest.v1.json
examples/phase0/: project.json
examples/phase0/expected/: AssetManifest.json  RenderOutput.json  RenderPlan.json  Script.json  ShotList.json
orchestrator/: __init__.py  cli.py  packager.py  pipeline.py  registry.py  validator.py
orchestrator/stages/: __init__.py  stage1_generate_script.py  stage2_script_to_shotlist.py  stage3_shotlist_to_assetmanifest.py  stage4_build_renderplan.py  stage5_render_preview.py
orchestrator/utils/: __init__.py  agent_bin.py  hashing.py
pipelines/: README.md
providers/: README.md
schemas/: RenderOutput.v1.json  ShotList.v1.json
scripts/: verify_integration.py
tests/: test_asset_id_slug.py  test_contracts.py  test_e2e_investigate_determinism.py  test_hashing.py  test_resume.py  test_run_index.py  test_schema_validation.py  test_stage1.py  test_stage2_flag.py  test_stage4_stub_replacement.py  test_stage5.py  test_wave4.py  test_wave5.py  test_wave6.py  test_wave7.py  test_wave8.py  test_wave8b.py  test_wave9.py
workers/: README.md
